# eeg-pipeline

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  read_seizures.py
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.test.ts  api.ts  index.css  types.ts
frontend/src/components/: dashboard.test.tsx  dashboard.tsx
pipeline/: api.py  benchmark.py  db.py  models.py  schemas.py  simulator.py  sqlalchemy_docs.md
tests/: api_ingest.http  conftest.py  test_api.py
